# beaconship

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  Rocket.toml
.cargo/: config.toml
src/: lib.rs  model.rs
