[package]
name = "beaconship"
version = "0.1.0"
edition = "2018"
authors = ["Hongze Xia <hongze.x@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
reqwest = "0.11.5"
hostname = "0.3.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"