[package]
name = "beaconship"
version = "0.1.0"
edition = "2018"
authors = ["Hongze Xia <hongze.x@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
futures = "0.3.17"
hyper = { version = "0.14.13", features = ["client", "http1", "http2"]}
hyper-tls = "0.5"
# reqwest = {version="0.11.5", features=["blocking"]}
hostname = "0.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"